@@ -1,4 +1,8 @@
 = Version History =
+x.x:
+
+- fixed: blog widget more link in widget
+
 2.2 (2012-03-02):
 
 - added: dutch translation
